--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 	--primary-white-color: #ffffff;
 	--secondary-color: #f5f4fa;
 	--bg-secondary-color: #2f303a;
+	--icon-color: #afb1b8;
 }
 
 /* * {
@@ -79,7 +80,7 @@ body {
 /* Header */
 
 .page-header {
-	border: 1px solid #ececec;
+	border-bottom: 1px solid #ececec;
 }
 
 .main-nav {
@@ -124,22 +125,39 @@ body {
 	display: flex;
 	margin-left: auto;
 }
+.icon {
+	display: flex;
+	align-items: center;
+	margin-right: 10px;
+	fill: var(--icon-color);
+}
+.icon:hover {
+	fill: var(--accent-color);
+}
+
+.site-con-item a {
+	display: flex;
+	fill: var(--icon-color);
+	/* outline: 1px solid tomato; */
+}
 
 .site-con .link {
 	font-weight: 500;
+
 	/* font-size: 14px; */
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	text-decoration: none;
 }
 
-.site-con .link:hover,
-.site-con .link:focus {
+.site-con a:hover,
+.site-con a:focus {
 	color: var(--accent-color);
 }
 
 /* Hero */
 .hero {
+	text-align: center;
 	padding-top: 200px;
 	padding-bottom: 200px;
 }
@@ -158,6 +176,17 @@ body {
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 }
+
+.hero-bg {
+	height: 600px;
+	max-width: 1600px;
+	margin-left: auto;
+	margin-right: auto;
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/backgraund-hero.jpg);
+	/* text-align: center; */
+	background-color: var(--bg-secondary-color);
+}
+
 /* Section */
 
 /* Hide heading */
@@ -210,11 +239,43 @@ body {
 	margin-right: 30px;
 }
 
+.feature-item::before {
+	display: block;
+	content: "";
+	height: 120px;
+	background-color: var(--secondary-color);
+	border-radius: 4px;
+	margin-bottom: 30px;
+	background-repeat: no-repeat;
+	background-position: center;
+	/* background-size: contain; */
+}
+
+.icon-one::before {
+	background-image: url("/images/svg/antenna.svg");
+}
+
+.icon-two::before {
+	background-image: url("/images/svg/clock.svg");
+}
+
+.icon-three::before {
+	background-image: url("/images/svg/diagram.svg");
+}
+
+.icon-foure::before {
+	background-image: url("/images/svg/astronaut.svg");
+}
+
 .feature-list .title {
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
 	text-transform: uppercase;
+}
+
+.feature-item:last-child {
+	margin-right: 0;
 }
 
 /* Work */
@@ -258,10 +319,63 @@ body {
 }
 
 .team-list .text {
-	margin-bottom: 30px;
+	margin-bottom: 16px;
 
 	font-size: 16px;
 	line-height: 1.19;
+}
+
+.social-item-list {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 30px;
+	gap: 10px;
+}
+
+.social-item a {
+	display: flex;
+	justify-content: center;
+	fill: var(--icon-color);
+	width: 44px;
+	height: 44px;
+	background-color: var(--primary-white-color);
+	border-radius: 50%;
+}
+
+.social-item a:hover {
+	background: var(--accent-color);
+	fill: var(--primary-white-color);
+}
+
+/* Clients */
+
+.client-list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.client-item {
+	display: flex;
+	justify-content: center;
+	width: 170px;
+	height: 92px;
+	border: 1px solid #afb1b8;
+	border-radius: 4px;
+}
+
+.client-item a {
+	display: flex;
+	justify-content: center;
+	fill: var(--icon-color);
+}
+
+.client-item a:hover {
+	fill: var(--accent-color);
+	/* width: 170px;
+	height: 92px;
+	border: 3px solid var(--accent-color);
+	border-radius: 4px; */
+	
 }
 
 /* footer */
@@ -291,11 +405,6 @@ body {
 	color: var(--accent-color);
 }
 
-.hero-bg {
-	text-align: center;
-	background-color: var(--bg-secondary-color);
-}
-
 .footer-bg {
 	padding-top: 60px;
 	padding-bottom: 60px;
@@ -305,6 +414,29 @@ body {
 .footer-list li:last-child {
 	margin: 0;
 }
+
+.footer-box {
+	display: flex;
+}
+
+.footer-social {
+	width: 206px;
+	margin-left: 70px;
+}
+
+.footer-social .text {
+	color: var(--primary-white-color);
+	margin-bottom: 20px;
+}
+
+.footer-social .social-item a {
+	fill: var(--primary-white-color);
+	background: rgba(255, 255, 255, 0.1);
+}
+.footer-social .social-item a:hover {
+	background: var(--accent-color);
+}
+
 /* Button */
 
 .button {
@@ -314,6 +446,7 @@ body {
 	border-radius: 4px;
 	border: none;
 }
+
 .button.primary {
 	padding: 10px 32px;
 
@@ -371,6 +504,7 @@ img {
 	width: 370px;
 	margin-right: 30px;
 	margin-bottom: 30px;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 	/* border: 1px solid #eeeeee; */
 }
 
