--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ body {
 	max-width: 1600px;
 	margin-left: auto;
 	margin-right: auto;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/backgraund-hero.jpg);
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/backgraund-hero.jpg);
 	/* text-align: center; */
 	background-color: var(--bg-secondary-color);
 }
@@ -253,19 +253,19 @@ body {
 }
 
 .icon-one::before {
-	background-image: url("/images/svg/antenna.svg");
+	background-image: url("../images/svg/antenna.svg");
 }
 
 .icon-two::before {
-	background-image: url("/images/svg/clock.svg");
+	background-image: url("../images/svg/clock.svg");
 }
 
 .icon-three::before {
-	background-image: url("/images/svg/diagram.svg");
+	background-image: url("../images/svg/diagram.svg");
 }
 
 .icon-foure::before {
-	background-image: url("/images/svg/astronaut.svg");
+	background-image: url("../images/svg/astronaut.svg");
 }
 
 .feature-list .title {
