--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,12 @@ body {
 	align-items: center;
 	margin-right: 10px;
 	fill: var(--icon-color);
+	--icon-color: currentColor;
 }
-.icon:hover,
+/* .icon:hover,
 .icon:focus {
 	fill: var(--accent-color);
-}
+} */
 
 .site-con-item a {
 	display: flex;
@@ -154,6 +155,7 @@ body {
 .site-con a:hover,
 .site-con a:focus {
 	color: var(--accent-color);
+	fill: var(--accent-color);
 }
 
 /* Hero */
@@ -183,7 +185,8 @@ body {
 	max-width: 1600px;
 	margin-left: auto;
 	margin-right: auto;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/backgraund-hero.jpg);
+	background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+		url(../images/backgraund-hero.jpg);
 	/* text-align: center; */
 	background-color: var(--bg-secondary-color);
 }
@@ -369,15 +372,22 @@ body {
 	display: flex;
 	justify-content: center;
 	fill: var(--icon-color);
+	padding: 0 32px;
+	
 }
+
 
 .client-item a:hover,
 .client-item a:focus {
 	fill: var(--accent-color);
-	/* width: 170px;
+}
+
+.client-item:hover,
+.client-item:focus {
+	width: 170px;
 	height: 92px;
-	border: 3px solid var(--accent-color);
-	border-radius: 4px; */
+	border: 1px solid var(--accent-color);
+	border-radius: 4px;
 }
 
 /* footer */
@@ -419,6 +429,7 @@ body {
 
 .footer-box {
 	display: flex;
+	align-items: baseline;
 }
 
 .footer-social {
@@ -426,7 +437,17 @@ body {
 	margin-left: 70px;
 }
 
+.footer-social ul {
+	margin-bottom: 0;
+}
+
 .footer-social .text {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	/* letter-spacing: 0.03em; */
+	text-transform: uppercase;
+
 	color: var(--primary-white-color);
 	margin-bottom: 20px;
 }
@@ -512,7 +533,14 @@ img {
 	/* border: 1px solid #eeeeee; */
 }
 
-.filter-item:hover {
+.filter-item-list {
+	display: block;
+	text-decoration: none;
+	color: var(--primary-text-color);
+}
+
+.filter-item-list:hover,
+.filter-item-list:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
